Dodanie niezbędnych bibliotek

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,5 @@
 pip install argparse
+pip install dicttoxml
+pip install xmltodict
+# pip install json - paczka dostępna domyślnie
+# pip install yaml - paczka dostępna domyślnie
