--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pip install argparse
 pip install dicttoxml
 pip install xmltodict
+# pip install xml - paczka dostępna domyślnie
 # pip install json - paczka dostępna domyślnie
 # pip install yaml - paczka dostępna domyślnie
