Uzupełnienie requirements oraz builme o linie wymagane przy automatycznym generowaniu .exe

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 argparse
 dicttoxml
 xmltodict
+pyyaml # Wymagane do pyinstaller, wbudowany yaml tworzy problemy z .exe
 # xml - paczka dostępna domyślnie
 # json - paczka dostępna domyślnie
 # yaml - paczka dostępna domyślnie
