Poprawa workflow o nową nazwę projektu.

--- a/.github/workflows/build_with_pyinstaller.yml
+++ b/.github/workflows/build_with_pyinstaller.yml
@@ -43,9 +43,12 @@ jobs:
     - name: Struktura plików dla .exe
       run: |
         mkdir -Force artefacts
-        Remove-Item -Force .\artefacts\konwerter.exe
-        Move-Item .\dist\konwerter.exe .\artefacts\konwerter.exe
-        git add .\artefacts\konwerter.exe
+        $filePath = ".\artefacts\konwerter.exe"
+        if (Test-Path -Path $filePath){
+          Remove-Item -Force $filePath
+        }
+        Move-Item .\dist\konwerter.exe $filePath
+        git add $filePath
     - name: Scommituj artefakt bezpośrednio do repozytorium
       uses: stefanzweifel/git-auto-commit-action@v5.0.1
       with:
